feat: implement release of reservation
