# internal/handlers/reservation.go
@@ -63,9 +63,64 @@ func (h *TransactionHandler) createReservation(c *fiber.Ctx) error {
 	})
 }
 
+// createRelease godoc
+// @tags        Transaction
+// @router      /api/v1/transaction/release [post]
+// @summary     Release of the user's balance
+// @description Release of the user's balance to another service
+// @param       body body     dto.Reservation true "Release info"
+// @response    201  {object} responses.ReservationReleased
+// @response    400  {object} responses.ErrorResp
+// @response    404  {object} responses.ErrorResp
+// @response    422  {object} responses.ErrorResp
+// @response    500  {object} responses.ErrorResp
 func (h *TransactionHandler) createRelease(c *fiber.Ctx) error {
-	// todo: implement
-	panic("implement me")
+	var body dto.Reservation
+	if err := c.BodyParser(&body); err != nil {
+		h.l.Debug("failed to parse body", zap.Error(err))
+		return c.Status(fiber.StatusBadRequest).JSON(&responses.ErrorResp{
+			Message:     "Bad request",
+			Description: err.Error(),
+		})
+	}
+
+	id, err := h.s.CreateRelease(body)
+	var verr *responses.ValidationErrResp
+	if errors.As(err, &verr) {
+		h.l.Debug("validation failed", zap.Error(err))
+		return c.Status(fiber.StatusUnprocessableEntity).JSON(&responses.ErrorResp{
+			Message:     "Validation error",
+			Description: err.Error(),
+		})
+	}
+
+	if errors.Is(err, persistence.ErrForeignKeyViolation) {
+		h.l.Debug("service or wallet does not exist", zap.Error(err))
+		return c.Status(fiber.StatusNotFound).JSON(&responses.ErrorResp{
+			Message:     "Service or user wallet not found",
+			Description: err.Error(),
+		})
+	}
+
+	if errors.Is(err, persistence.ErrInsufficientFunds) {
+		h.l.Debug("insufficient funds", zap.Error(err))
+		return c.Status(fiber.StatusUnprocessableEntity).JSON(&responses.ErrorResp{
+			Message:     "Insufficient funds",
+			Description: err.Error(),
+		})
+	}
+
+	if err != nil {
+		h.l.Error("failed to create release", zap.Error(err))
+		return c.Status(fiber.StatusInternalServerError).JSON(&responses.ErrorResp{
+			Message:     "Internal server error",
+			Description: err.Error(),
+		})
+	}
+
+	return c.Status(fiber.StatusCreated).JSON(&responses.ReservationReleased{
+		ID: id,
+	})
 }
 
 // cancelReservation godoc
@@ -74,7 +129,7 @@ func (h *TransactionHandler) createRelease(c *fiber.Ctx) error {
 // @summary     Cancel reservation of the user's balance
 // @description Cancel reservation of the user's balance from another service
 // @param       body body     dto.Reservation true "Reservation info"
-// @response    200  {object} responses.TransactionUpdated
+// @response    200  {object} responses.ReservationCancelled
 // @response    400  {object} responses.ErrorResp
 // @response    404  {object} responses.ErrorResp
 // @response    422  {object} responses.ErrorResp
@@ -123,7 +178,7 @@ func (h *TransactionHandler) cancelReservation(c *fiber.Ctx) error {
 		})
 	}
 
-	return c.Status(fiber.StatusOK).JSON(&responses.TransactionUpdated{
+	return c.Status(fiber.StatusOK).JSON(&responses.ReservationCancelled{
 		ID: id,
 	})
 }
